<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.example.ledwisdom1.user.UserActivity" />

        <variable
            name="handler"
            type="com.example.ledwisdom1.CallBack" />

        <variable
            name="viewModel"
            type="com.example.ledwisdom1.user.UserViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f6f6f9"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:background="@drawable/icon_back"
                android:onClick="@{handler::handleClick}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_feedback_text"
                android:textColor="@android:color/white"
                android:textSize="20sp" />


        </android.support.v7.widget.Toolbar>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="16sp"
            android:text="@string/fragment_feddback_hint"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:layout_marginTop="24dp"
            android:gravity="start|top"
            android:background="@drawable/bg_feedback"
            android:layout_margin="16dp"
            app:msg="@{viewModel.errMsg[viewModel.errType]}"
            app:show="@{viewModel.errType==UserActivity.EMPTY_CONTENT}"
            android:hint="@string/fragment_feedback_et_hint"
            android:padding="4dp"
            android:text="@={viewModel.content}" />

        <EditText
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="start|top"
            android:hint="@string/fragment_feddback_hint1"
            android:padding="8dp"
            android:layout_margin="16dp"
            android:background="@drawable/bg_feedback"
            app:msg="@{viewModel.errMsg[viewModel.errType]}"
            app:show="@{viewModel.errType==UserActivity.EMPTY_CONTACT}"
            android:text="@={viewModel.contact}" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/submit"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:background="@drawable/bg_blue"
            android:onClick="@{handler::handleClick}"
            android:text="@string/comint"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</layout>

