<?xml version="1.0" encoding="utf-8"?>
<!--depre-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="titleBar"
            type="com.example.ledwisdom1.model.TitleBar" />

        <variable
            name="handler"
            type="com.example.ledwisdom1.fragment.UnLoginFragment" />
    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".device.AddLampFragment">

        <RelativeLayout
            android:id="@+id/rl_title"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/colorPrimary"
            tools:showIn="@layout/fragment_add_lamp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="8dp"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:text="@string/la_login"
                android:contentDescription="@string/app_name"
                />


        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{()->handler.toggle(true)}"
                android:text="@string/all_open"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{()->handler.toggle(false)}"
                android:text="@string/all_close"
                android:textAlignment="center" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_scanned_lights"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/ll_bottom_bar"
            android:layout_below="@id/rl_title" />
    </RelativeLayout>


</layout>
